2006-05-28  Csaba Henk <csaba.henk@creo.hu>
        * Switch getattr / statfs to an object oriented interface:
	   - Revert the addition of the statvfs method.
	   - Implement compat conversion for old getattr / statfs
	     results.

2006-05-27  Csaba Henk <csaba.henk@creo.hu>
	* setup.py related fixes:
	   - fix missing installation of fuse.py
	   - fix typo in reference to shout-py  
	   - define __version__ in a way so that it's visible both in
	     fuse.py and setup.py
	* NEW PYTHON API:
	   - Python/C interface trimmed further: we pass down the opvector,
	     the argument vector and the multithreaded flag, period.
	   - Generate FUSE commandline from FuseArgs instance.
	   - Add optparse based parsing API with support for extracting
	     FUSE related options to a FuseArgs instance.
	   - Update xmp.py to the new API, enhance it with a "-o root=PATH"
	     option.
	   - Add compat hooks (python variable, environment variable).
	   - Document these changes in README.new_fusepy_api.
	   - bump __version__ to 0.2pre1.
           - add os.statvfs() compatible statvfs method, mark statfs
             deprecated, keep statfs useable via statfs -> statvfs conversion

2006-05-24  Csaba Henk <csaba.henk@creo.hu>
	* Revamp fs initialization code:
	   - Get rid of both of the kopts/lopts and the fuse_opt stuff,
	     just keep opts in a dict and assemble a simple argc/argv pair
	     from that. This means that for all supported API versions we can
	     get away with the fuse_setup() / *fuse_loop*() / fuse_teardown()
	     call sequence. This is much more clean and correct than the
	     earlier approaches, and differenciating between APIs boils down
	     to differenciating between the exact form of the above routines.
	   - Properly catch and propagate errors.
	   - Add crude support for fetching options from command line to xmp.py.
	* Syntax cleanup:
	   - Strip leo markup. I'm not using leo and I find that markup somewhat