@@ -1,4 +1,6 @@
 2006-05-28  Csaba Henk <csaba.henk@creo.hu>
+	* Add support for st_rdev, st_blksize, st_block stat fields.
+          Noticed by Robert Bradford.
         * Switch getattr / statfs to an object oriented interface:
 	   - Revert the addition of the statvfs method.
 	   - Implement compat conversion for old getattr / statfs
